# django_logingov_oidc

./: README.md  pyproject.toml  requirements.txt  runtests.py  setup.py
.github/workflows/: test.yml
djangooidc/: backends.py
djangooidc/tests/: test_settings.py
