[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django_logingov_backend"
version = "0.0.3"
authors = [
  { name="18F Developers", email="18fdev@gsa.gov" },
]
description = "A Django OpenID Connect authentication backend designed for use with Login.gov"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]